# hexrepo

./: .gitmodules  README.md
.github/workflows/: build-hexcli.yml  build-hexcloud.yml  build-hexcom.yml  build.yml  deploy-hexcloud.yml
api/: hexagon.proto
deploy/gcloud/: README.md  api_config.yaml  api_descriptor.pb
src/hexcli/: .gitignore  Makefile  README.md  go.mod  go.sum  nb.go
src/hexcli/api/: hexagon.proto
src/hexcli/end2end/: hexcloud.jl
src/hexcli/internal/pkg/hexcli/: hexagon.pb.go  hexagon_grpc.pb.go
src/hexcli/internal/pkg/hexclient/: hexclient.go  map.go  repo.go  status.go
src/hexcli/internal/pkg/hexcloud/: hexagon_grpc.pb.go
src/hexcloud/: Dockerfile  Makefile  README.md  example.sql  go.mod  go.sum  hexagon.db  schema.sql
src/hexcloud/cmd/hexcli/: Makefile  README.md  nb.go
src/hexcloud/cmd/hexcloud/: hexcloud.go
src/hexcloud/internal/pkg/hexclient/: graph.go  hexclient.go  map.go  repo.go  root.go  util.go
src/hexcloud/internal/pkg/hexcloud/: hexagon.pb.go  hexagon_grpc.pb.go  pair_test.go  pairs.go  server.go  storage.go  storageFirestore.go  storageSQLite.go
src/hexcloud/pkg/hexgrid/: hex.go  hex_test.go  pair_test.go  pairs.go
src/hexcloud/test/: data_hexdata.csv  data_hexmap.csv  data_mapdata.csv  data_repo.csv
src/hexcom/: .gitignore  CMakeLists.txt  README.md
src/hexcom/apps/example/: CMakeLists.txt  hexworld_clientcli.cpp
src/hexcom/lib/: CMakeLists.txt  hex_client.cpp  hex_client_impl.cpp  hex_client_impl.h
src/hexcom/lib/protos/: api_config.yaml  api_descriptor.pb  hexagon.proto
src/hexcom/unreal/: HexWorldLibrary.Build.cs
src/hexgen/: README.md  go.mod  go.sum  mygraph.gv
src/hexgen/cmd/hexgen/: main.go
src/hexgen/internal/pkg/hexgen/: gen.go  root.go
src/hexgen/internal/pkg/hexgraph/: generate.go  graph.go
src/hexrust/: Cargo.toml  build.rs
src/hexrust/src/: _.rs  main.rs
